Mon Aug  1 13:45:38 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * docs/manual/manual.pdf:
        * docs/manual/modeling/quick-ref.tex:

	  Updated the description of property elements.

Mon Aug  1 04:47:07 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * docs/manual/manual.pdf:
        * docs/manual/modeling/quick-ref.tex:

          Fixed errors in the explanation.

Mon Aug  1 04:38:26 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * docs/manual/analysis/example.datagraph:
        * docs/manual/analysis/unite.tex:

          Fixed grammatical and spelling errors.

        * docs/manual/manual.pdf:
        * docs/manual/manual.tex:
        * docs/manual/modeling.tex:
        * docs/manual/modeling/figs/collocationgroup.png:
        * docs/manual/modeling/figs/componentassembly.png:
        * docs/manual/modeling/figs/componentassemblyref.png:
        * docs/manual/modeling/figs/componentref.png:
        * docs/manual/modeling/figs/node.png:
        * docs/manual/modeling/figs/property.png:
        * docs/manual/modeling/quick-ref.tex:

          Finished first version of the PICML quick reference.

Sun Jul 31 21:48:40 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * docs/manual/modeling/figs:
        * docs/manual/modeling/figs/aggregate.png:
        * docs/manual/modeling/figs/component.png:
        * docs/manual/modeling/figs/event.png:
        * docs/manual/modeling/figs/ineventport.png:
        * docs/manual/modeling/figs/key.png:
        * docs/manual/modeling/figs/member.png:
        * docs/manual/modeling/figs/object.png:
        * docs/manual/modeling/figs/outeventport.png:
        * docs/manual/modeling/figs/package.png:
        * docs/manual/modeling/figs/providedrequestport.png:
        * docs/manual/modeling/figs/requiredrequestport.png:
        * docs/manual/modeling/quick-ref.tex:

          Completed interface definitions portion of the PICML quick