@@ -1,9 +1,15 @@
+Mon Aug  1 16:17:25 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * etc/scripts/download_sources.py:
+
+          Added support for downloading Boost and Xerces-C.
+
 Mon Aug  1 13:45:38 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * docs/manual/manual.pdf:
         * docs/manual/modeling/quick-ref.tex:
 
-	  Updated the description of property elements.
+          Updated the description of property elements.
 
 Mon Aug  1 04:47:07 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
 
